--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'org.zerock'
+group = 'org.kiye.eternalreturnrootmanagerbackend'
 version = '0.0.1-SNAPSHOT'
 description = 'Eternal_Return_RootManager_Backend'
 
@@ -24,31 +24,42 @@ repositories {
     mavenCentral()
 }
 
+/**
+ * QueryDSL Q 클래스 생성 경로를 소스셋에 포함
+ * (IntelliJ에서 generated 소스로 인식시키기 위해)
+ */
+sourceSets {
+    main {
+        java {
+            srcDirs += ["$buildDir/generated/sources/annotationProcessor/java/main"]
+        }
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    // Spring 6+에서 파라미터 이름 유지(아까 로그에서도 언급된 옵션)
+    options.compilerArgs += ['-parameters']
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    //implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.amqp:spring-rabbit-stream'
+
     compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-    runtimeOnly 'com.mysql:mysql-connector-j'
-    runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
-    runtimeOnly 'com.oracle.database.r2dbc:oracle-r2dbc'
-    runtimeOnly 'io.asyncer:r2dbc-mysql'
-    runtimeOnly 'org.mariadb:r2dbc-mariadb:1.1.3'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
+
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    //developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
@@ -57,14 +68,32 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'com.google.code.gson:gson:2.13.2'
-    // https://mvnrepository.com/artifact/net.coobird/thumbnailator
+
     // 썸네일러
     implementation 'net.coobird:thumbnailator:0.4.21'
 
-    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+    // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
+
+    // JPA + PostgreSQL
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.postgresql:postgresql'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    /**
+     * QueryDSL (Jakarta)
+     * - implementation: QueryDSL 사용 코드 컴파일/실행에 필요
+     * - annotationProcessor: Q 클래스 생성에 필요
+     */
+    implementation "com.querydsl:querydsl-jpa:5.1.0:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
+
+    // Jakarta annotations (간혹 APT에서 필요로 해서 같이 넣어두면 안전)
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
